--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@types/node": "^17.0.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
-  },
-  "dependencies": {
+    "typescript": "^4.5.4",
     "@types/multer": "^1.4.7",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+  },
+  "dependencies": {
     "body-parser": "^1.19.1",
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
